add auth, payment service